--- a/Clarity Theme/Mod - Hover Image Low-Rez Compressed.css
+++ b/Clarity Theme/Mod - Hover Image Low-Rez Compressed.css
@@ -1,2 +1,5 @@
-/* "Clarity" Modification by Valerio Lyndon / Low-Rez Hover Image / Revision 0.3 */
+/*-S-T-A-R-T--------------------*\
+| Hover Image Low-Rez R0.3       |
+\*------------------------------*/
 .data.image .link{overflow:visible;height:64px}.data.image .link:after{transition-property:top!important;border-radius:50%}.list-item:hover .data.image .link:after{opacity:1}.data.image img{border-radius:50%}@keyframes img-in{from{top:50%;max-height:0;opacity:0}to{top:calc(50% - 100px);max-height:200px;opacity:1}}.list-item:hover img{position:absolute;top:calc(50% - 100px);left:-166px;z-index:50;width:150px!important;height:200px!important;border-radius:8px;box-shadow:0 0 2px #000;pointer-events:none;animation:img-in .3s ease}
+/*------------------------E-N-D-*/
