--- a/Clarity Theme/Mod - Review Tags Compressed.css
+++ b/Clarity Theme/Mod - Review Tags Compressed.css
@@ -1,6 +1,10 @@
-/* "Clarity" by Valerio Lyndon / Review Tags Modification / Revision 0.1 */
+/*-S-T-A-R-T--------------------*\
+| Review Tags R0.1               |
+\*------------------------------*/
 
 /* Raise or lower this number to change how wide the box is. Make sure not to remove the "px" at the end. */
 .data.tags { width: 240px; }
 
 .data.tags div:not(:empty){padding:2px 8px;background:var(--btn-bg);border-radius:8.5px}.data.tags span{display:inline;font-size:11px!important;cursor:text}.data.tags a:not(.edit){display:inline;padding:0;background:0 0;pointer-events:none}
+
+/*------------------------E-N-D-*/
