--- a/Clarity Theme/Event Themes/Winter for Dark Mode.css
+++ b/Clarity Theme/Event Themes/Winter for Dark Mode.css
@@ -1,5 +1,5 @@
 /*-S-T-A-R-T--------------------*\
-| Winter Event (Dark) R0.5       |
+| Winter Event (Dark) R0.6       |
 \*------------------------------*/
  
  :root {
@@ -99,7 +99,7 @@ body {
 
 .list-table { --btn-bg: rgba(25,25,25,0.9); }
 
-.list-item, .data.number, .data.priority, .list-table[data-items="[]"]:after {
+.list-item, .data.number, .data.priority, .list-table[data-items="[]"]:after, .data.status:before, .data.status:after {
 	background: #212121 no-repeat center / cover fixed !important;
 	background-image:
 		linear-gradient(to right, rgba(33,33,33,0.75), rgba(33,33,33,0.94) 30%, rgba(33,33,33,0.895), rgba(33,33,33,0.94) 70%, rgba(33,33,33,0.75)),
@@ -107,7 +107,7 @@ body {
 		!important;
 }
 
-.list-item, .list-table[data-items="[]"]:after { box-shadow: 0 1px 5px rgba(0,0,0,0.42); }
+.list-item, .list-table[data-items="[]"]:after, .data.status:before, .data.status:after { box-shadow: 0 1px 5px rgba(0,0,0,0.42); }
 
 .list-item:hover .data.tags a.edit { opacity: 0.9; }
 
