Kure 0.4.2 Image Optimization
- Optimize banner image from 1.3MB to 0.3MB.

This update also commits the images to Github.

--- a/Kure Theme/Kure.css
+++ b/Kure Theme/Kure.css
@@ -1,7 +1,7 @@
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*\
 | Kure (name subject to change)  |
 | by Valerio Lyndon              |
-| Version 0.4.1                  |
+| Version 0.4.2                  |
 |                                |
 |   This theme is incomplete.    |
 | Functionality is limited and   |
@@ -25,7 +25,7 @@ div[style="padding-top: 8px"] {
 
 :root {
 	/* Images */
-	--banner: url(https://i.imgur.com/XnyA9re.png);
+	--banner: url(https://i.imgur.com/lnTv8jR.jpg);
 	--background: url(https://i.imgur.com/K9x805M.jpg);
 	
 	/* Colours */
